--- a/biome.json
+++ b/biome.json
@@ -7,7 +7,14 @@
   },
   "files": {
     "ignoreUnknown": true,
-    "ignore": ["dist", "node_modules", ".git", "*.min.js", "pnpm-lock.yaml", "tsconfig*.json"]
+    "ignore": [
+      "dist",
+      "node_modules",
+      ".git",
+      "*.min.js",
+      "pnpm-lock.yaml",
+      "tsconfig*.json"
+    ]
   },
   "organizeImports": {
     "enabled": true
@@ -38,7 +45,9 @@
         "noBannedTypes": "error",
         "noExcessiveCognitiveComplexity": {
           "level": "warn",
-          "options": { "maxAllowedComplexity": 15 }
+          "options": {
+            "maxAllowedComplexity": 15
+          }
         },
         "noExcessiveNestedTestSuites": "error",
         "noForEach": "warn",
@@ -124,7 +133,11 @@
           "options": {
             "strictCase": false,
             "requireAscii": true,
-            "filenameCases": ["kebab-case", "PascalCase", "camelCase"]
+            "filenameCases": [
+              "kebab-case",
+              "PascalCase",
+              "camelCase"
+            ]
           }
         },
         "useForOf": "error",
@@ -136,24 +149,53 @@
             "strictCase": false,
             "conventions": [
               {
-                "selector": { "kind": "function" },
-                "formats": ["camelCase", "PascalCase"]
+                "selector": {
+                  "kind": "function"
+                },
+                "formats": [
+                  "camelCase",
+                  "PascalCase"
+                ]
               },
               {
-                "selector": { "kind": "variable" },
-                "formats": ["camelCase", "PascalCase", "CONSTANT_CASE"]
+                "selector": {
+                  "kind": "variable"
+                },
+                "formats": [
+                  "camelCase",
+                  "PascalCase",
+                  "CONSTANT_CASE"
+                ]
               },
               {
-                "selector": { "kind": "typeLike" },
-                "formats": ["PascalCase"]
+                "selector": {
+                  "kind": "typeLike"
+                },
+                "formats": [
+                  "PascalCase"
+                ]
               },
               {
-                "selector": { "kind": "objectLiteralProperty" },
-                "formats": ["camelCase", "PascalCase", "CONSTANT_CASE", "snake_case"]
+                "selector": {
+                  "kind": "objectLiteralProperty"
+                },
+                "formats": [
+                  "camelCase",
+                  "PascalCase",
+                  "CONSTANT_CASE",
+                  "snake_case"
+                ]
               },
               {
-                "selector": { "kind": "typeProperty" },
-                "formats": ["camelCase", "PascalCase", "CONSTANT_CASE", "snake_case"]
+                "selector": {
+                  "kind": "typeProperty"
+                },
+                "formats": [
+                  "camelCase",
+                  "PascalCase",
+                  "CONSTANT_CASE",
+                  "snake_case"
+                ]
               }
             ]
           }
@@ -263,8 +305,16 @@
         "useSortedClasses": {
           "level": "warn",
           "options": {
-            "attributes": ["className", "class"],
-            "functions": ["cn", "clsx", "cva", "twMerge"]
+            "attributes": [
+              "className",
+              "class"
+            ],
+            "functions": [
+              "cn",
+              "clsx",
+              "cva",
+              "twMerge"
+            ]
           }
         }
       }
@@ -272,7 +322,9 @@
   },
   "overrides": [
     {
-      "include": ["src/components/ui/**"],
+      "include": [
+        "src/components/ui/**"
+      ],
       "linter": {
         "rules": {
           "a11y": {
@@ -285,11 +337,35 @@
       }
     },
     {
-      "include": ["*.config.ts", "*.config.js", "vite.config.ts"],
+      "include": [
+        "*.config.ts",
+        "*.config.js",
+        "vite.config.ts",
+        "vitest.config.ts"
+      ],
       "linter": {
         "rules": {
           "style": {
             "noDefaultExport": "off"
+          }
+        }
+      }
+    },
+    {
+      "include": [
+        "**/*.test.ts",
+        "**/*.test.tsx",
+        "**/*.spec.ts",
+        "**/*.spec.tsx",
+        "src/test/**"
+      ],
+      "linter": {
+        "rules": {
+          "suspicious": {
+            "noExplicitAny": "warn"
+          },
+          "complexity": {
+            "noExcessiveCognitiveComplexity": "off"
           }
         }
       }
