--- a/biome.json
+++ b/biome.json
@@ -7,14 +7,7 @@
   },
   "files": {
     "ignoreUnknown": true,
-    "ignore": [
-      "dist",
-      "node_modules",
-      ".git",
-      "*.min.js",
-      "pnpm-lock.yaml",
-      "tsconfig*.json"
-    ]
+    "ignore": ["dist", "node_modules", ".git", "*.min.js", "pnpm-lock.yaml", "tsconfig*.json"]
   },
   "organizeImports": {
     "enabled": true
@@ -133,11 +126,7 @@
           "options": {
             "strictCase": false,
             "requireAscii": true,
-            "filenameCases": [
-              "kebab-case",
-              "PascalCase",
-              "camelCase"
-            ]
+            "filenameCases": ["kebab-case", "PascalCase", "camelCase"]
           }
         },
         "useForOf": "error",
@@ -152,50 +141,31 @@
                 "selector": {
                   "kind": "function"
                 },
-                "formats": [
-                  "camelCase",
-                  "PascalCase"
-                ]
+                "formats": ["camelCase", "PascalCase"]
               },
               {
                 "selector": {
                   "kind": "variable"
                 },
-                "formats": [
-                  "camelCase",
-                  "PascalCase",
-                  "CONSTANT_CASE"
-                ]
+                "formats": ["camelCase", "PascalCase", "CONSTANT_CASE"]
               },
               {
                 "selector": {
                   "kind": "typeLike"
                 },
-                "formats": [
-                  "PascalCase"
-                ]
+                "formats": ["PascalCase"]
               },
               {
                 "selector": {
                   "kind": "objectLiteralProperty"
                 },
-                "formats": [
-                  "camelCase",
-                  "PascalCase",
-                  "CONSTANT_CASE",
-                  "snake_case"
-                ]
+                "formats": ["camelCase", "PascalCase", "CONSTANT_CASE", "snake_case"]
               },
               {
                 "selector": {
                   "kind": "typeProperty"
                 },
-                "formats": [
-                  "camelCase",
-                  "PascalCase",
-                  "CONSTANT_CASE",
-                  "snake_case"
-                ]
+                "formats": ["camelCase", "PascalCase", "CONSTANT_CASE", "snake_case"]
               }
             ]
           }
@@ -305,16 +275,8 @@
         "useSortedClasses": {
           "level": "warn",
           "options": {
-            "attributes": [
-              "className",
-              "class"
-            ],
-            "functions": [
-              "cn",
-              "clsx",
-              "cva",
-              "twMerge"
-            ]
+            "attributes": ["className", "class"],
+            "functions": ["cn", "clsx", "cva", "twMerge"]
           }
         }
       }
@@ -322,9 +284,7 @@
   },
   "overrides": [
     {
-      "include": [
-        "src/components/ui/**"
-      ],
+      "include": ["src/components/ui/**"],
       "linter": {
         "rules": {
           "a11y": {
@@ -337,12 +297,7 @@
       }
     },
     {
-      "include": [
-        "*.config.ts",
-        "*.config.js",
-        "vite.config.ts",
-        "vitest.config.ts"
-      ],
+      "include": ["*.config.ts", "*.config.js", "vite.config.ts", "vitest.config.ts"],
       "linter": {
         "rules": {
           "style": {
@@ -352,13 +307,7 @@
       }
     },
     {
-      "include": [
-        "**/*.test.ts",
-        "**/*.test.tsx",
-        "**/*.spec.ts",
-        "**/*.spec.tsx",
-        "src/test/**"
-      ],
+      "include": ["**/*.test.ts", "**/*.test.tsx", "**/*.spec.ts", "**/*.spec.tsx", "src/test/**"],
       "linter": {
         "rules": {
           "suspicious": {
@@ -366,6 +315,16 @@
           },
           "complexity": {
             "noExcessiveCognitiveComplexity": "off"
+          }
+        }
+      }
+    },
+    {
+      "include": ["src/server/**"],
+      "linter": {
+        "rules": {
+          "suspicious": {
+            "noConsole": "off"
           }
         }
       }
