refactor: update Docker setup and enhance server static file handling
- Renamed 'api' service to 'app' in docker-compose.yml for clarity.
- Modified Dockerfile to build both frontend and server, ensuring proper file copying for production.
- Implemented static file serving in the server index.ts for production environment, including SPA fallback for improved user experience.
- Made minor formatting adjustments in SlideLinkCard component for better readability.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,9 @@
 # ═══════════════════════════════════════════════════════════════
-# Deep Interviewer - Docker Compose for Local Development
+# Deep Interviewer - Docker Compose
 # ═══════════════════════════════════════════════════════════════
 
 services:
-  api:
+  app:
     build:
       context: .
       dockerfile: Dockerfile
@@ -38,4 +38,3 @@ services:
 volumes:
   interview-data:
     driver: local
-
