--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@langchain/anthropic": "^1.2.3",
     "@langchain/core": "^1.1.4",
     "@langchain/langgraph": "^1.0.4",
+    "@langchain/langgraph-checkpoint": "^1.0.0",
     "@langchain/langgraph-checkpoint-sqlite": "^1.0.0",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-avatar": "^1.1.11",
