fix(interviewer): update model configuration for improved performance
- Changed modelName from "claude-sonnet-4-20250514" to "claude-haiku-4-5" in docker-compose.yml and related configuration files.
- Adjusted temperature setting from 0.7 to 0.3 to enhance model performance.
- Updated corresponding tests to reflect these changes for consistency.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,7 @@ services:
       - LANGSMITH_TRACING=${LANGSMITH_TRACING}
       # Model configuration (optional)
       - MODEL_PROVIDER=${MODEL_PROVIDER:-anthropic}
-      - MODEL_NAME=${MODEL_NAME:-claude-sonnet-4-20250514}
+      - MODEL_NAME=${MODEL_NAME:-claude-haiku-4-5}
     volumes:
       # Persist SQLite database
       - interview-data:/app/data
