--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,8 +33,8 @@ services:
       # Content configuration
       - WORKSHOP_SLIDES_URL=${WORKSHOP_SLIDES_URL}
     volumes:
-      # Persist SQLite database
-      - interview-data:/app/data
+      # Bind mount local data directory for persistence and sync
+      - ./data:/app/data
     healthcheck:
       test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:3001/health"]
       interval: 30s
@@ -42,7 +42,3 @@ services:
       retries: 3
       start_period: 10s
     restart: unless-stopped
-
-volumes:
-  interview-data:
-    driver: local
